fix issue of overlap button

--- a/aerotropolis_app/static/googlemapapi.css
+++ b/aerotropolis_app/static/googlemapapi.css
@@ -126,7 +126,7 @@ width: 280px;
 
 #ontopDiv {
     position: fixed;
-    top: 0;
+    top: 93%;
     left:300px;
     width: 10%;
     height: 20px;
